# cashbox

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake  threads_setup.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/cashbox/: sample_library.hpp
src/: CMakeLists.txt  main.cpp
src/atm/: Atm_machine.hpp  Bank_machine.hpp  CMakeLists.txt  Interface_machine.hpp  Messages.hpp  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
